Fix alignment in header

--- a/ui/scss/core/components/individual_sim_ui/_rotation_tab.scss
+++ b/ui/scss/core/components/individual_sim_ui/_rotation_tab.scss
@@ -60,6 +60,10 @@
 
 	.rotation-tab-header {
 		width: 100%;
+
+		.btn {
+			margin-bottom: var(--block-spacer);
+		}
 	}
 
 	.rotation-tab-auto {
